ola-parser/src/testdata/syntaxTests/tryCatch/low_level_with_wrong_type.sol
contract C {
    fn f()  -> (u256, u256) {
        try this.f() {

        } catch (u256) {
        }
    }
}
// ====
// EVMVersion: >=byzantium
// ----
// TypeError 6231: (94-118): Expected `catch (bytes memory ...) { ... }` or `catch { ... }`.
